<resources>
    <string name="app_name">Learn Pronunciation</string>
    <string name="action_settings">Settings</string>
    <string name="about_line_1">This is a simple, easy to use and a learning app that is built using Android Text-to-Speech API.</string>
    <string name="about_line_2">User can hear pronunciation in different languages at adjustable speech rate.</string>
    <string name="about_line_3">User can also save pronunciation as an Audio file into device.</string>
    <string name="about_line_4">The motive behind the development of this app is to take benefit of an Android\'s inbuilt functionality in a useful manner.</string>
    <string name="help_heading"> Steps to use:</string>
    <string name="help_line_1">Type something in Text Area.</string>
    <string name="help_line_2">Click <b>Pronounce</b> button.</string>
    <string name="help_line_3">Click <b>View List</b> button to view previously saved files.</string>
    <string name="help_line_4"> Settings:</string>
    <string name="help_line_5">Click settings icon located at bottom right side.</string>
    <string name="help_line_6">You can switch between <b>Language Accent</b> and <b>Speed</b>.</string>
    <string name="help_line_7">Turn On <b>Autosave audio</b> to save pronunciation into device.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
