<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment_help"
    android:padding="@dimen/_16sdp">

    <TextView
        android:id="@+id/help_heading_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_heading"
        android:textSize="@dimen/_14ssp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TableLayout
        android:id="@+id/container_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/help_heading_1"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="0dp">

        <TableRow android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TextView
                android:id="@+id/help_line_count_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1. "
                android:textSize="@dimen/_13ssp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/help_line_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_line_1"
                android:textSize="@dimen/_13ssp"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="0dp">

            <TextView
                android:id="@+id/help_line_count_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2. "
                android:textSize="@dimen/_13ssp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/help_line_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_line_2"
                android:textSize="@dimen/_13ssp"
                android:textColor="@android:color/black"/>

        </TableRow>

        <TableRow android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="0dp">

            <TextView
                android:id="@+id/help_line_count_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3. "
                android:textSize="@dimen/_13ssp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/help_line_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_line_3"
                android:textSize="@dimen/_13ssp"
                android:textColor="@android:color/black"/>

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/help_heading_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_first"
        android:text="@string/help_line_4"
        android:textSize="@dimen/_14ssp"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/_20sdp"/>

    <TableLayout
        android:id="@+id/container_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/help_heading_2"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="0dp">

        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/help_line_count_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1. "
                android:textSize="@dimen/_13ssp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/help_line_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_line_5"
                android:textSize="@dimen/_13ssp"
                android:textColor="@android:color/black"/>
        </TableRow>

        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="0dp">
            <TextView
                android:id="@+id/help_line_count_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2. "
                android:textSize="@dimen/_13ssp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/help_line_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_line_6"
                android:textSize="@dimen/_13ssp"
                android:textColor="@android:color/black"/>
        </TableRow>

        <TableRow android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="0dp">
            <TextView
                android:id="@+id/help_line_count_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3. "
                android:textSize="@dimen/_13ssp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/help_line_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_line_7"
                android:textSize="@dimen/_13ssp"
                android:textColor="@android:color/black"/>
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>