<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment_About_First"
    android:background="@color/colorPrimary"
    android:padding="@dimen/_7sdp">

    <LinearLayout
        android:id="@+id/firstContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            app:srcCompat="@drawable/ic_info_outline_white_24dp"/>

        <TextView
            android:id="@+id/about_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About:"
            android:textSize="@dimen/_15ssp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="0dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstContainer"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="0dp">

        <TableRow android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <TextView
                android:id="@+id/about_count_line1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1. "
                android:textSize="@dimen/_14ssp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/about_line1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_line_1"
                android:textSize="@dimen/_14ssp"
                android:textColor="@android:color/white" />

        </TableRow>

        <TableRow android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="0dp">

            <TextView
                android:id="@+id/about_count_line2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2. "
                android:textSize="@dimen/_14ssp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/about_line2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_line_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about_line1"
                android:textSize="@dimen/_14ssp"
                android:textColor="@android:color/white" />

        </TableRow>

        <TableRow android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="0dp">

            <TextView
                android:id="@+id/about_count_line3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3. "
                android:textSize="@dimen/_14ssp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/about_line3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_line_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about_line1"
                android:textSize="@dimen/_14ssp"
                android:textColor="@android:color/white" />

        </TableRow>

        <TableRow android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="0dp">

            <TextView
                android:id="@+id/about_count_line4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4. "
                android:textSize="@dimen/_14ssp"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/about_line4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_line_4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about_line1"
                android:textSize="@dimen/_14ssp"
                android:textColor="@android:color/white" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>